# HaruQuant

./: .coveragerc_folder  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  Agents.md  CMakeLists.txt  LICENSE  README.md  TELEGRAM_SETUP_GUIDE.md  clean_pycache.py  cleanup_runner_files.py  config.ini  config.ini.template  create_multi_configs.py  fix_strategy_runners.py  list.txt  live_trading_state.json  main.py  manual.py  multi_strategy_state.json  multi_strategy_status.json  notebook.ipynb  package.json  pyproject.toml  requirements.txt  risk_enabled_state.json  run_multiple.py  setup.py  temp.py  temp_sim.py  test_detail.xml  test_results_final.txt  update_all_backtest_examples.py  update_backtest_examples.py  vcpkg.json
.github/: pull_request_template.md
.qwen/: settings.json
agents/: __init__.py  _persistence.py  activation.py  agent_registry.py  backtest.py  backtest_analyst_agent.py  base.py  ceo.py  ceo_templates.py  codegen.py  cost_optimizer.py  debate.py  evaluation.py  operating_cycle.py  optimization.py  optimization_comparator.py  orchestrator.py  paper_execution.py  performance_reporter.py  performance_reporter_daily_agent.py  performance_reporter_weekly_board_agent.py  permissions.py  planner.py  planner_agent.py  portfolio_manager.py  risk_reviewer.py  robustness.py  robustness_scorecard.py  schemas.py  statistical_validation.py  strategy_creator.py  strategy_reviewer.py  strategy_validator.py  task_manager.py
api/: __init__.py  ai_chat.py  app.py  approvals.py  auth_utils.py  dependencies.py  health.py  main.py  scheduler.py  websocket.py
apps/: __init__.py
backend/: README.md
backend_retiring/: README.md
backtest/: backtestingpy.py  vectorbtpro.py
bridge/: CMakeLists.txt
bridge/src/: bak_module.cpp  core_bindings.cpp  module.cpp  risk_bindings.cpp  sim_bindings.cpp
config/: __init__.py  agent_model.py  agent_settings.json  credentials.py  live_trading_config.json  live_trading_config.toml  multi_strategy_config.json  multi_strategy_config_with_db_notifications.json  risk_enabled_multi_strategy.json  settings.py
contracts/: README.md  __init__.py  common.py  serialization.py
controller/: __init__.py  data.py  database.py  logger.py  mylogger.py  notification.py  order.py  risk.py  strategy.py  technicals.py  trade.py
controllers/: __init__.py  data.py  risk.py  strategy.py  technicals.py
cpp/: CMakeLists.txt  coverage_thresholds.json
cpp/benchmarks/: CMakeLists.txt  bench_event_loop.cpp  bench_hello.cpp
cpp/include/core/: backtest_simulator.hpp  engine.hpp  event_loop.hpp  state.hpp  write_ahead_log.hpp
cpp/include/costs/: commission_model.hpp  costs_engine.hpp  slippage_model.hpp  spread_model.hpp  swap_model.hpp
cpp/include/engine/: clock_service.hpp  engine.hpp  event.hpp  event_loop.hpp  event_sequencer.hpp  global_clock.hpp  replay_clock.hpp  session_calendar.hpp  write_ahead_log.hpp  zmq_broadcaster.hpp
cpp/include/hqt/: hello.hpp
cpp/include/risk/: risk_engine.hpp
cpp/include/sim/: account_monitor.hpp  backtest_engine.hpp  calculators.hpp  portfolio_engine.hpp  result_metrics.hpp  sim_data.hpp  simulator_client.hpp  simulator_state.hpp  tick_model.hpp  trade_gateway.hpp  trade_record.hpp
cpp/include/trading/: account_info.hpp  deal_info.hpp  history_order_info.hpp  market_state.hpp  order_info.hpp  position_info.hpp  symbol_info.hpp  terminal_info.hpp  trade.hpp
cpp/include/usage/: logger_usage.hpp
cpp/include/util/: connection_pool.hpp  currency_converter.hpp  error.hpp  fixed_point.hpp  logger.hpp  margin_calculator.hpp  random.hpp  schema_validator.hpp  timestamp.hpp  validators.hpp
cpp/src/: hello.cpp
cpp/src/core/: backtest_simulator.cpp  engine.cpp
cpp/src/engine/: analytics.cpp  connection_pool.cpp  engine.cpp  error.cpp  infrastructure.cpp  logger.cpp  models.cpp  risk_engine.cpp  schema_validator.cpp  trading.cpp  usage.cpp
cpp/src/risk/: risk_engine.cpp
cpp/src/sim/: account_monitor.cpp  backtest_engine.cpp  calculators.cpp  portfolio_engine.cpp  result_metrics.cpp  sim_data.cpp  simulator_client.cpp  simulator_state.cpp  tick_model.cpp  trade_gateway.cpp  trade_record.cpp
cpp/src/trading/: account_info.cpp  deal_info.cpp  history_order_info.cpp  order_info.cpp  position_info.cpp  symbol_info.cpp  terminal_info.cpp  trade.cpp
cpp/src/usage/: account_info_example.cpp  deal_info_example.cpp  history_order_info_example.cpp  logger_usage.cpp  order_info_example.cpp  position_info_example.cpp  symbol_info_example.cpp  terminal_info_example.cpp  trade_example.cpp  usage.cpp
cpp/src/util/: error_description.cpp  logger.cpp  validators.cpp
cpp/tests/: CMakeLists.txt  test_allocation_models.cpp  test_backtest_event_runner.cpp  test_backtest_vectorized.cpp  test_broker_adapter_interface.cpp  test_clock_service.cpp  test_connection_pool.cpp  test_costs_engine.cpp  test_currency_margin.cpp  test_data_structures.cpp  test_distributed_optimization_runner.cpp  test_engine.cpp  test_engine_trading.cpp  test_event_loop.cpp  test_event_sequencer.cpp  test_execution_retry.cpp  test_experiment_registry.cpp  test_hello.cpp  test_logger.cpp  test_monte_carlo_sensitivity.cpp  test_optimization_runners.cpp  test_portfolio_state.cpp  test_position_book.cpp  test_rebalance_policies.cpp  test_reconcile_escalation.cpp  test_replay_certification.cpp  test_replay_clock.cpp  test_risk_engine.cpp  test_schema_validator.cpp  test_session_calendar.cpp  test_sim_backtest_single_symbol.cpp  test_sim_calculators.cpp  test_sim_data.cpp  test_sim_oms_state_machine.cpp  test_sim_order_send_market.cpp  test_sim_pending_orders.cpp  test_sim_pending_trigger_monitor.cpp  test_sim_portfolio_engine.cpp  test_sim_position_monitor.cpp  test_sim_result_metrics.cpp  (+18 more)
docs/: 02_system_design_document.md  03_implementation_plan.md  04_developer_setup.md  architecture.md  backtest-performance-optimization.md  hybrid_trading_acceptance_test_plan.xlsx  portfolio_backtesting.md  risk_implementation_plan.md  risk_restructure_plan.md  system_monitoring.md  trading-simulator-implementation-checklist.md
execution/: __init__.py  (+4 more)
(+4563 files in other folders)
